Fixes for image stretching.

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -163,6 +163,7 @@ li { margin-bottom: 1.6rem; }
 .post-snippet-asset {
   flex: 0 auto; 
   width: 30%; 
+  height: auto; 
   padding-right: 2rem;
   margin: 0; 
 }
